--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/beamosec/twittercli#readme",
   "dependencies": {
-    "twit": "^2.2.5"
+    "blessed": "^0.1.81",
+    "chalk": "^1.1.3",
+    "fs-extra": "^1.0.0",
+    "imaging": "^2.1.0",
+    "marked": "^0.3.6",
+    "q": "^1.4.1",
+    "readline-sync": "^1.4.5",
+    "twit": "^2.2.5",
+    "winston": "^2.3.0"
   }
 }
